2013-07-11  Glenn Morris  <rgm@gnu.org>

	* automated/files.el: Stop "local variables" confusion.

	* automated/flymake-tests.el (flymake-tests): Remove unused group.

	* automated/icalendar-tests.el (icalendar-tests--do-test-cycle):
	Use with-current-buffer.

	* automated/undo-tests.el (undo-test-buffer-modified)
	(undo-test-file-modified): New tests.

2013-07-09  Michael Albinus  <michael.albinus@gmx.de>

	* automated/file-notify-tests.el (file-notify-test00-availability):
	Set :expected-result.
	(file-notify-test01-add-watch, file-notify-test01-add-watch-remote)
	(file-notify-test02-events, file-notify-test02-events-remote)
	(file-notify-test03-autorevert, file-notify-test03-autorevert-remote):
	Skip when `file-notify-support' is nil.  (Bug#14823)

2013-07-09  Glenn Morris  <rgm@gnu.org>

	* automated/inotify-test.el (inotify-add-watch, inotify-rm-watch):
	Declare.
	(inotify-file-watch-simple): Silence compiler.

	* automated/python-tests.el (python-indent-block-enders):
	Make it actually test something.

	* automated/package-x-test.el: Require package-test when compiling.

	* automated/add-log-tests.el, automated/advice-tests.el:
	* automated/imenu-test.el, automated/package-x-test.el:
	* automated/python-tests.el, automated/ruby-mode-tests.el:
	* automated/xml-parse-tests.el: Explictly require ert.

2013-07-08  Kenichi Handa  <handa@gnu.org>

	* automated/decoder-tests.el (decoder-tests-prefer-utf-8-read):
	Use with-ccoding-priority to avoid side-effect (Bug#14781).

2013-07-05  Michael Albinus  <michael.albinus@gmx.de>

	* automated/file-notify-tests.el
	(file-notify-test-remote-temporary-file-directory): Use
	`null-device' on w32.
	(file-notify--test-tmpfile, file-notify--test-tmpfile1)
	(file-notify--test-results, file-notify--test-event)
	(file-notify--deftest-remote, file-notify--event-test)
	(file-notify--test-event-handler)
	(file-notify--test-make-temp-name): Renamed, in order to mark them
	internal.